# coach

./: .gitignore  Cargo.toml  Dockerfile  README.md  coach-things.sh
.github/workflows/: ci.yml  run-coach.yml
src/: args.rs  drill.rs  drill_runner.rs  generators.rs  healthcheck.rs  main.rs
src/common/: client.rs  coach_errors.rs  generators.rs  histograms.rs  mod.rs
src/drills/: collection_churn.rs  collection_concurrent_lifecycle.rs  collection_snapshots_churn.rs  collections_churn.rs  high_concurrency.rs  large_retrieve.rs  mod.rs  points_churn.rs  points_optional_vectors.rs  points_search.rs  points_upsert.rs  search.rs  toggle_indexing.rs
