[package]
name = "coach"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
clap = { version = "4.5.51", features = ["derive"] }
ctrlc = "3.5.1"
futures = "0.3.31"
async-trait = "0.1.89"
qdrant-client = "1.17.0"
rand = "0.9.1"
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4.28"
env_logger = "0.11.8"
hdrhistogram = "7.5.4"
